--- a/app/assets/stylesheets/tracks.css.scss
+++ b/app/assets/stylesheets/tracks.css.scss
@@ -17,9 +17,9 @@ body.tracks_controller {
   }
 
   &.new_action, &.show_action {
-    #wrapper {
+    /*#wrapper {
       overflow: hidden;
-    }
+    }*/
 
     #side-bar {
       height: 100%;
